app/assets/stylesheets/scaffolds.css.scss
body, input[type="text"], ol, p, span, td, ul {
	font-family: verdana, arial, helvetica, sans-serif;
	font-size: 13px;
	line-height: 18px;
}

a {
	color: #0000FF;
	text-decoration: none;
	&:hover {
		text-decoration: underline;
	}
}

body {
	background-color: #FFF;
	color: #333;
	margin: 0;
	padding: 0;
}

pre {
	background-color: #EEE;
	font-size: 11px;
	padding: 10px;
}

.field_label {
	font-weight: bold;
}

.field_with_errors {
	padding: 2px;
	background-color: #FF0000;
	display: table;
}

.selected {
	font-weight: bold;
}

#alert {
	color: #FF0000;
}

#content, #logged_in_user, #notification_area {
	width: 100%;
	max-width: 640px;
}

#error_explanation {
	background-color: #F0F0F0;
	border: 2px solid #FF0000;
	margin-bottom: 20px;
	padding: 7px;
	padding-bottom: 0;
	h2 {
		background-color: #C00;
		color: #FFF;
		font-size: 12px;
		font-weight: bold;
		margin: -7px;
		margin-bottom: 0;
		padding: 5px 5px 5px 15px;
		text-align: left;
	}
	ul li {
		font-size: 12px;
		list-style: square;
	}
}

#logged_in_user, #notification_area {
	text-align: center;
}

#logged_in_user {
	padding-bottom: 7px;
}

#notice {
	color: #336633;
}

#notification_area {
	padding-bottom: 5px;
}

